--- a/Assignment4.ipynb
+++ b/Assignment4.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This assignment requires that you to find **at least** two datasets on the web which are related, and that you visualize these datasets to answer a question with the broad topic of **sports or athletics** (see below) for the region of **Thessaloniki, Thessaloniki, Greece**, or **Greece** more broadly.\n",
     "\n",
-    "You can merge these datasets with data from different regions if you like! For instance, you might want to compare **Thessaloniki, Thessaloniki, Greece** to Ann Arbor, USA. In that case at least one source file must be about **Thessaloniki, Thessaloniki, Greece**.\n",
+    "You can merge these datasets with data from different regions if you like!\n",
     "\n",
     "You are welcome to choose datasets at your discretion, but keep in mind **they will be shared with your peers**, so choose appropriate datasets. Sensitive, confidential, illicit, and proprietary materials are not good choices for datasets for this assignment. You are welcome to upload datasets of your own as well, and link to them using a third party repository such as github, bitbucket, pastebin, etc. Please be aware of the Coursera terms of service with respect to intellectual property.\n",
     "\n",
